use riot-tag-loader for webpack / deploy and run on docker

--- a/7/riot-webpack/index.html
+++ b/7/riot-webpack/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Hello Riot.</title>
-    <script src="dist/js/app.c3b633304e648c785b36.js" defer></script>
+    <script src="js/app.e8588a45680b53b2a45f.js" defer></script>
   </head>
   <body>
     <!-- place the custom tag anywhere inside the body -->
