--- a/7/riot-webpack/index.html
+++ b/7/riot-webpack/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <!-- place the custom tag anywhere inside the body -->
-    <todo></todo>
+    <div id="main"></div>
   </body>
 </html>
