SPA (client side only)

--- a/7/riot-webpack/index.html
+++ b/7/riot-webpack/index.html
@@ -4,7 +4,7 @@
     <script src="js/app.js" defer></script>
   </head>
   <body>
-    <!-- place the custom tag anywhere inside the body -->
+    <menu></menu>
     <div id="main"></div>
   </body>
 </html>
