--- a/7/riot-webpack/index.html
+++ b/7/riot-webpack/index.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="ja">
   <head>
+    <meta charset="utf-8">
     <title>Hello Riot.</title>
     <script src="js/app.js" defer></script>
   </head>
